# crates/arest/Cargo.toml
[package]
name = "arest"
version = "0.9.0"
edition = "2021"
description = "AREST engine: FORML2 parser, constraint compiler, evaluator, forward chainer, RMAP, and verbalization"
repository = "https://github.com/graphdl/arest"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# Named arest-cli (not arest) to avoid a .pdb collision with the
# lib target on Windows. The CLI behavior is unchanged; invoke via
#   cargo run --bin arest-cli -- <readings_dir>
name = "arest-cli"
path = "src/main.rs"

[features]
default = ["wit", "debug-def"]
wit = ["dep:wit-bindgen"]
cloudflare = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
local = ["dep:rusqlite"]
parallel = ["dep:rayon"]
# Gates the `debug` def which returns a full projection of the compiled
# state (nouns, fact types, constraints, state machines). Useful for test
# introspection but exposes internals in production — leave OFF for
# release builds. Enabled by default so `cargo test` works out of the box.
debug-def = []
# Gates the apply-variant profiler in ast.rs. When OFF (default),
# ast::apply pays zero overhead. When ON, every apply records its
# variant's call count and cumulative nanoseconds; ast::profile_enable
# / profile_dump become meaningful. Enable via:
#   cargo test --features profile --lib profile_create_order -- --ignored --nocapture
profile = []
# WASM-lowering PoC — gates src/wasm_lower.rs and its wasm-encoder /
# wasmtime deps. Off by default because wasmtime pulls in a large
# native-code dependency tree. Run the PoC with:
#   cargo test --features wasm-lower --lib wasm_lower
wasm-lower = ["dep:wasm-encoder", "dep:wasmi"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
wit-bindgen = { version = "0.41", default-features = false, features = ["macros"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rayon = { version = "1", optional = true }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
# WASM-lowering PoC (task #152). wasm-encoder emits bytes; wasmtime
# hosts them for the roundtrip test so we can prove semantic
# equivalence with Rust apply() before investing in the full
# Func → WASM compiler. Both are opt-in via the `wasm-lower` feature
# — they pull large native-code dep trees and we don't want every
# cargo test to pay for them.
wasm-encoder = { version = "0.230", optional = true }
# wasmi is a pure-Rust WASM interpreter. Small compile footprint (no
# cranelift JIT), fine for correctness tests. For performance
# comparisons use the real V8 / wasmer host at the benchmark site —
# the wasmi result here only validates that the emitted bytes are
# semantically equivalent to Rust apply().
wasmi = { version = "0.50", optional = true }

[dev-dependencies]

[profile.release]
opt-level = 2
lto = "thin"

# Test profile: optimize the code under test because the suite is
# interpreter-heavy (every ast::apply call goes through a match on
# ~40 Func variants). At opt-level = 0 these match arms don't inline,
# so the interpreter pays match-overhead per reduction step. opt-level
# = 2 collapses them. Debug info is on by default for stack traces.
# Compile cost goes up on the first test run after a code change;
# runtime drops by 100× on interpreter workloads.
[profile.test]
opt-level = 2
