# crates/arest/Cargo.toml
[package]
name = "arest"
version = "0.9.0"
edition = "2021"
description = "AREST engine: FORML2 parser, constraint compiler, evaluator, forward chainer, RMAP, and verbalization"
repository = "https://github.com/graphdl/arest"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# Named arest-cli (not arest) to avoid a .pdb collision with the
# lib target on Windows. The CLI behavior is unchanged; invoke via
#   cargo run --bin arest-cli -- <readings_dir>
name = "arest-cli"
path = "src/main.rs"

[features]
default = ["wit", "debug-def", "std-deps", "parallel"]
wit = ["dep:wit-bindgen"]
cloudflare = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
local = ["dep:rusqlite"]
parallel = ["dep:rayon"]
# Gates the `debug` def which returns a full projection of the compiled
# state (nouns, fact types, constraints, state machines). Useful for test
# introspection but exposes internals in production — leave OFF for
# release builds. Enabled by default so `cargo test` works out of the box.
debug-def = []
# Gates the apply-variant profiler in ast.rs. When OFF (default),
# ast::apply pays zero overhead. When ON, every apply records its
# variant's call count and cumulative nanoseconds; ast::profile_enable
# / profile_dump become meaningful. Enable via:
#   cargo test --features profile --lib profile_create_order -- --ignored --nocapture
profile = []
# WASM-lowering PoC — gates src/wasm_lower.rs and its wasm-encoder /
# wasmtime deps. Off by default because wasmtime pulls in a large
# native-code dependency tree. Run the PoC with:
#   cargo test --features wasm-lower --lib wasm_lower
wasm-lower = ["dep:wasm-encoder", "dep:wasmi"]
# std-deps bundles serde, serde_json, regex, hmac, sha2, subtle — all
# require std and are excluded from the no_std / kernel build. Included
# in `default` so all normal (std) builds keep working without changes.
std-deps = ["dep:serde", "dep:serde_json", "dep:regex", "dep:hmac", "dep:sha2", "dep:subtle", "hashbrown/serde"]
# no_std build target — gates every `use std::*` behind a
# `std`/`no_std` split so the crate can be embedded in bare-metal
# contexts (FPGA soft-cores, x86_64 kernel via #175+). Enable via:
#   cargo check --no-default-features --features no_std
# Pulls `hashbrown` (HashMap) and `spin` (RwLock/Mutex/OnceLock),
# both of which are unconditional deps — the feature flag only
# toggles std / core / alloc selection in the crate itself.
no_std = []
# SWIM-style gossip membership (Cluster-1). Pulls in std::net +
# std::thread — incompatible with no_std. Off by default so embedded
# and FPGA builds don't pay for a network stack they won't use.
# Enable via `cargo test --features cluster --lib` or at runtime by
# passing `--cluster <bootstrap-addr>` to arest-cli.
cluster = []

[dependencies]
# serde / serde_json / regex require std — made optional so the no_std
# build (kernel, FPGA) can exclude them. The `std-deps` feature bundles
# them; it is on by default and disabled under `no_std`.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1", optional = true }
wit-bindgen = { version = "0.41", default-features = false, features = ["macros"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rayon = { version = "1", optional = true }
# hmac / sha2 / subtle are used only by crypto.rs which is gated on
# `not(no_std)` — make them optional so the no_std build skips them.
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2", optional = true }
# WASM-lowering PoC. wasm-encoder emits bytes; wasmtime
# hosts them for the roundtrip test so we can prove semantic
# equivalence with Rust apply() before investing in the full
# Func → WASM compiler. Both are opt-in via the `wasm-lower` feature
# — they pull large native-code dep trees and we don't want every
# cargo test to pay for them.
wasm-encoder = { version = "0.230", optional = true }
# wasmi is a pure-Rust WASM interpreter. Small compile footprint (no
# cranelift JIT), fine for correctness tests. For performance
# comparisons use the real V8 / wasmer host at the benchmark site —
# the wasmi result here only validates that the emitted bytes are
# semantically equivalent to Rust apply().
wasmi = { version = "0.50", optional = true }
# no_std replacements. hashbrown is the std HashMap source since 1.36;
# enabling it under no_std gives us the same API without linking `std`.
# spin provides Mutex / RwLock / Once on bare metal where `std::sync`
# isn't available (no OS to block against — spin-locks instead).
# hashbrown's serde feature is only needed when serde itself is present.
# It is activated via `std-deps` feature (see above) — not here directly,
# so the no_std / kernel build doesn't pull in serde through hashbrown.
hashbrown = { version = "0.14" }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once"] }

[dev-dependencies]

[profile.release]
opt-level = 2
lto = "thin"

# Test profile: optimize the code under test because the suite is
# interpreter-heavy (every ast::apply call goes through a match on
# ~40 Func variants). At opt-level = 0 these match arms don't inline,
# so the interpreter pays match-overhead per reduction step. opt-level
# = 2 collapses them. `debug = 1` keeps line tables (needed for
# backtraces / panic messages) without the full DWARF tree — 2x faster
# linking on Windows. `incremental = true` forces Cargo to keep the
# incremental compile cache even with opt > 0; small edits then
# recompile only the touched module.
[profile.test]
opt-level = 2
debug = 1
incremental = true

# Fast-iteration test profile — `cargo test --profile dev-fast --lib`.
# Runs unoptimized so tests that exercise ast::apply over large
# populations are ~100× slower; the trade is 3-5× faster compile +
# link. Use while iterating on a narrow feature; switch back to the
# default test profile before committing to catch perf regressions.
[profile.dev-fast]
inherits = "test"
opt-level = 0
debug = 1
incremental = true
