# crates/arest/Cargo.toml
[package]
name = "arest"
version = "0.9.0"
edition = "2021"
description = "AREST engine: FORML2 parser, constraint compiler, evaluator, forward chainer, RMAP, and verbalization"
repository = "https://github.com/graphdl/arest"
license = "AGPL-3.0-or-later"
# Disable Cargo's per-file `tests/*.rs` auto-discovery so the three
# big integration suites can be bundled into one `tests/all.rs` binary
# (see comments there). Each remaining standalone test binary is
# declared explicitly via [[test]] below.
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# Named arest-cli (not arest) to avoid a .pdb collision with the
# lib target on Windows. The CLI behavior is unchanged; invoke via
#   cargo run --bin arest-cli -- <readings_dir>
name = "arest-cli"
path = "src/main.rs"

# Merged integration test binary — bundles tests/integration.rs,
# tests/properties.rs, tests/e3_integration.rs as submodules. Avoids
# linking arest + deps three times for the same suite.
[[test]]
name = "all"
path = "tests/all.rs"

# Stays standalone — must observe process-global PLATFORM_FALLBACK
# registry untainted by other suites' install_platform_fn calls.
[[test]]
name = "sec_2_platform_fallback_audit"
path = "tests/sec_2_platform_fallback_audit.rs"

# Cluster gossip tests — gated on the `cluster` feature so default
# `cargo test` runs don't pay for spinning up real UDP sockets.
[[test]]
name = "cluster_udp"
path = "tests/cluster_udp.rs"
required-features = ["cluster"]

# Platform `zip_directory` / `unzip_file` (#404). The implementation
# lives in `src/platform/zip.rs` but is not yet declared as
# `pub mod platform;` in `lib.rs` (engine-owner agent wires that in
# a follow-up); meanwhile this test binary `#[path]`-includes the
# file directly so the codec round-trip is gated on every CI run.
# Listed explicitly because `autotests = false` disables the
# per-file auto-target detection.
[[test]]
name = "platform_zip"
path = "tests/platform_zip.rs"

[features]
# `core` is the always-on bundled-readings scope (Theorem 1-5
# backbone): readings/core/{core,state,instances,outcomes,validation,
# evolution}.md. Reserved as a no-op feature so callers can write
# `--features core` symmetrically with the optional `ui-readings`,
# `os-readings`, `templates` slices below; the actual `CORE_READINGS`
# constant in src/lib.rs is unconditional and always compiled in.
core = []
# `ui-readings` (#437) — pulls in readings/ui/ui.md. Enabled when any
# UI projection runs (the in-kernel Slint surface, ui.do worker). Off
# by default so a Cloudflare Worker doing pure CRM doesn't bake in
# design-token / render-tree definitions it never references.
ui-readings = []
# `os-readings` (#437) — pulls in readings/os/filesystem.md. Enabled
# only when AREST runs as the kernel (VFS + block device + process
# semantics actually have a referent). Hosted workers leave this off.
os-readings = []
# `templates` (#437) — convenience bundle for stock app templates
# (readings/templates/{organizations,agents}.md). Workers that bring
# their own org / agent definitions can leave this off; the kernel
# enables it for the demo-out-of-the-box experience.
templates = []
# `compat-readings` (#463) — Windows-via-Wine compat substrate
# (readings/compat/wine.md). Defines the Wine App noun + per-app
# DLL overrides / registry tweaks / winetricks recipes / Compat
# Rating as FORML facts. Future `arest run "App Name"` (#462c)
# compiles this state into a Wine prefix; ProtonDB ingest (#462e)
# folds external reports into the same graph. Off by default —
# workers that aren't running Wine apps shouldn't pay the bake cost.
compat-readings = []
default = ["wit", "debug-def", "std-deps", "parallel", "core", "ui-readings", "os-readings", "templates"]
wit = ["dep:wit-bindgen"]
# cloudflare: Cloudflare Worker build profile. The worker invokes
# `wasm-pack build --target bundler --no-default-features --features
# cloudflare,debug-def` (see package.json `build:wasm`). Composes the
# minimum feature set the worker needs:
#   * wit                — wit-bindgen for the host-shim ABI
#   * std-deps           — serde / serde_json / regex / hmac / sha2 /
#                          subtle / flate2 / hashbrown(serde). The
#                          parser + crypto + hashbrown serde paths all
#                          gate on this; without it ~50 unresolved
#                          imports surface in lib.rs / parse_forml2.
#   * core / ui-readings / templates — bundled reading scopes the
#                          worker exposes to clients.
# Documented in docs/11-portability.md as the canonical worker
# composition; keep in sync.
cloudflare = [
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "wit",
    "std-deps",
    "core",
    "ui-readings",
    "templates",
]
local = ["dep:rusqlite"]
parallel = ["dep:rayon"]
# Gates the `debug` def which returns a full projection of the compiled
# state (nouns, fact types, constraints, state machines). Useful for test
# introspection but exposes internals in production — leave OFF for
# release builds. Enabled by default so `cargo test` works out of the box.
debug-def = []
# Gates the apply-variant profiler in ast.rs. When OFF (default),
# ast::apply pays zero overhead. When ON, every apply records its
# variant's call count and cumulative nanoseconds; ast::profile_enable
# / profile_dump become meaningful. Enable via:
#   cargo test --features profile --lib profile_create_order -- --ignored --nocapture
profile = []
# WASM-lowering PoC — gates src/wasm_lower.rs and its wasm-encoder /
# wasmtime deps. Off by default because wasmtime pulls in a large
# native-code dependency tree. Run the PoC with:
#   cargo test --features wasm-lower --lib wasm_lower
wasm-lower = ["dep:wasm-encoder", "dep:wasmi"]
# std-deps bundles serde, serde_json, regex, hmac, sha2, subtle — all
# require std and are excluded from the no_std / kernel build. Included
# in `default` so all normal (std) builds keep working without changes.
std-deps = ["dep:serde", "dep:serde_json", "dep:regex", "dep:hmac", "dep:sha2", "dep:subtle", "dep:flate2", "hashbrown/serde"]
# no_std build target — gates every `use std::*` behind a
# `std`/`no_std` split so the crate can be embedded in bare-metal
# contexts (FPGA soft-cores, x86_64 kernel via #175+). Enable via:
#   cargo check --no-default-features --features no_std
# Pulls `hashbrown` (HashMap) and `spin` (RwLock/Mutex/OnceLock),
# both of which are unconditional deps — the feature flag only
# toggles std / core / alloc selection in the crate itself.
no_std = []
# SWIM-style gossip membership (Cluster-1). Pulls in std::net +
# std::thread — incompatible with no_std. Off by default so embedded
# and FPGA builds don't pay for a network stack they won't use.
# Enable via `cargo test --features cluster --lib` or at runtime by
# passing `--cluster <bootstrap-addr>` to arest-cli.
cluster = []

[dependencies]
# serde / serde_json / regex require std — made optional so the no_std
# build (kernel, FPGA) can exclude them. The `std-deps` feature bundles
# them; it is on by default and disabled under `no_std`.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1", optional = true }
wit-bindgen = { version = "0.41", default-features = false, features = ["macros"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rayon = { version = "1", optional = true }
# hmac / sha2 / subtle are used only by crypto.rs which is gated on
# `not(no_std)` — make them optional so the no_std build skips them.
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2", optional = true }
# flate2: gzip decompression for the vendored schema.org JSON-LD
# (#343). Used only by src/external/schema_org.rs which decompresses
# the embedded `schema_org.jsonld.gz` at ingest time.
flate2 = { version = "1", optional = true }
# WASM-lowering PoC. wasm-encoder emits bytes; wasmtime
# hosts them for the roundtrip test so we can prove semantic
# equivalence with Rust apply() before investing in the full
# Func → WASM compiler. Both are opt-in via the `wasm-lower` feature
# — they pull large native-code dep trees and we don't want every
# cargo test to pay for them.
wasm-encoder = { version = "0.230", optional = true }
# wasmi is a pure-Rust WASM interpreter. Small compile footprint (no
# cranelift JIT), fine for correctness tests. For performance
# comparisons use the real V8 / wasmer host at the benchmark site —
# the wasmi result here only validates that the emitted bytes are
# semantically equivalent to Rust apply().
wasmi = { version = "0.50", optional = true }
# no_std replacements. hashbrown is the std HashMap source since 1.36;
# enabling it under no_std gives us the same API without linking `std`.
# spin provides Mutex / RwLock / Once on bare metal where `std::sync`
# isn't available (no OS to block against — spin-locks instead).
# hashbrown's serde feature is only needed when serde itself is present.
# It is activated via `std-deps` feature (see above) — not here directly,
# so the no_std / kernel build doesn't pull in serde through hashbrown.
hashbrown = { version = "0.14" }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once"] }
# getrandom (#574): host-OS entropy adapter (`cli/entropy_host.rs`).
# Wraps Linux `getrandom(2)`, FreeBSD `getrandom(2)`, macOS
# `arc4random_buf(3)`, and Windows `BCryptGenRandom` behind a single
# `getrandom::getrandom(&mut buf)` call so the CLI doesn't grow a
# `cfg(target_os)` switch. Tiny dep (~200 lines + thin syscall shims),
# unconditional because every host CLI build needs it; wasm and bare-
# metal targets that don't link the std bin won't pull it in via the
# lib's no_std feature path. Pinned at 0.2 (same major as everything
# else in the ecosystem currently depends on).
[dev-dependencies]

# getrandom: gated on non-UEFI; emits compile_error! on *-unknown-uefi.
# Native (Linux/macOS/Windows) host CLI uses the OS-syscall backend.
[target."cfg(all(not(target_os = \"uefi\"), not(target_arch = \"wasm32\")))".dependencies]
getrandom = "0.2"

# wasm32 (Cloudflare Worker / browser bundler): getrandom 0.2 emits a
# compile-time error on wasm32-unknown-unknown unless the `js` feature
# is set, which routes the calls through wasm-bindgen / Web Crypto's
# `crypto.getRandomValues`. Cloudflare Workers expose Web Crypto, so
# the `js` backend is the right fit. Without this gate the worker
# build (`yarn build:wasm`, see package.json) fails to compile.
[target."cfg(target_arch = \"wasm32\")".dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2
lto = "thin"

# wasm-pack runs `wasm-opt -O` after cargo emits the wasm. With our
# call graph that pass currently lowers some panic paths to literal
# `unreachable` instructions in the worker — masking the actual
# panic message and surfacing as `RuntimeError: unreachable` on
# every `POST /api/parse`. Skip wasm-opt until we can identify the
# specific transformation that loses the source-level panic so
# `console_error_panic_hook` can do its job. Build size grows ~30%
# (4.5 MB → ~6 MB unoptimized) but the worker has a 10 MB ceiling
# so still fits.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Test profile — optimise the crate-under-test at opt-level = 1 (was 2).
# The suite is interpreter-heavy (every ast::apply call goes through a
# match on ~40 Func variants). opt-level 0 leaves the match arms unin-
# lined — interpreter pays match-overhead per reduction step. opt-level
# 1 inlines short functions and eliminates the obvious dispatch cost at
# ~2× faster compile than opt-level 2 on our crate. Dependency crates
# stay at opt-level 3 via the `package."*"` override below, so regex /
# serde / rayon runtime stays fully optimised — only arest itself slows
# down marginally. Net wall clock on the 760-test lib suite after an
# ast.rs edit: ~8-10 s (was ~14 s at opt-level 2).
#
# `debug = 1` keeps line tables (needed for backtraces / panic messages)
# without the full DWARF tree — 2× faster linking on Windows.
# `incremental = true` forces Cargo to keep the incremental compile
# cache even with opt > 0; small edits recompile only the touched module.
[profile.test]
opt-level = 1
debug = 1
incremental = true

# Deps stay at opt-level 3 — compiled once on the first build then
# cached forever across both `test` and `dev-fast` runs (matching flags
# means Cargo reuses the same artifacts, no rebuild when flipping
# profiles). Keeps regex / serde / rayon / wasmi at full speed even
# when user code drops to opt-level 1 or 0.
[profile.test.package."*"]
opt-level = 3

# Fast-iteration test profile — `cargo t` (alias in .cargo/config.toml
# resolves to `test --profile dev-fast --lib --features std-deps`).
# User code at opt-level 0 for fastest recompile; deps still at opt-
# level 3 via the package override below. Runtime penalty for unoptim-
# ised ast::apply is 5-20× on heavy tests, but they're filtered out by
# `--lib` and the short feedback loop usually wins. Switch back to the
# default `test` profile before committing to catch perf regressions.
[profile.dev-fast]
inherits = "test"
opt-level = 0
debug = 1
incremental = true

# Same package override as [profile.test.package."*"] — keeps deps at
# opt-level 3 so the cache is shared between `test` and `dev-fast`.
[profile.dev-fast.package."*"]
opt-level = 3
